tests/semantic/comp_infinite_recursion/comp_infinite_recursion.err
Error: Component instantiation limit reached in file comp_infinite_recursion.dl at line 2
    .init x = T
----^-----------
1 errors generated, evaluation aborted
