tests/semantic/comp_infinite_recursion/comp_infinite_recursion.dl
.comp A<T> {
    .init x = T
}

.init a = A<A>